--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "localstripe"
+name = "localstack-localstripe"
 description = """
-A fake but stateful Stripe server that you can run locally, for \
+LocalStack's fork of localstripe, a fake but stateful Stripe server that you can run locally, for \
 testing purposes."""
 readme = {file = "README.rst", content-type = "text/x-rst"}
 requires-python = ">=3.9"
